rust_writer_proc/tests/ui/parse_attrs_fails_if_macro_not_applied_to_struct.stderr
error: expected `struct`
 --> tests/ui/parse_attrs_fails_if_macro_not_applied_to_struct.rs:6:1
  |
6 | enum SomeEnum {
  | ^^^^
