rust_writer_proc/tests/ui/parse_attrs_fails_if_macro_not_applied_to_struct.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_proc::mutator;

#[mutator(a, b, c)]
enum SomeEnum {
	A,
	B,
	C,
}

fn main() {}
